--- a/estilo.css
+++ b/estilo.css
@@ -22,13 +22,14 @@ html {
     margin-bottom: 14px;
 }
 
-.login {
+.title {
 
     margin: 0 0 16px;
 }
 
 .div-separate {
     display: flex;
+
 
 
 }
@@ -38,18 +39,19 @@ html {
     padding: 4px 12px;
     text-transform: uppercase;
     border: none;
+    cursor: pointer;
 
 }
 
 .rgstr {
-
-    background-color: white;
-    color: var(--main-color)
+    color: var(--main-color);
+    text-decoration: none;
 }
 
 .log {
     background-color: var(--main-color);
     color: white;
+
 
 }
 
@@ -57,4 +59,10 @@ html {
     flex-grow: 1;
     text-align: right;
     text-decoration: none;
+}
+
+.paragrafo {
+    flex-grow: 1;
+    text-align: right;
+
 }
